lettres ok + 1vOrdi == impossible